@@ -150,7 +150,7 @@ a.small         { font-size: .9em; }
 .blackMedUnderlinedLink { font-size:11px; color:#006666;}
 
 .label          { font-weight: bold }
-.label.required { font-weight: bold; color: red}
+.label.required { font-weight: bold; color: #8b0000}
 .burgandyLabel { font-size:10px; font-weight:bold; color:#993300}
 .radioLabel  { font-size:12px; font-weight:bold;}
 .shortCategory  { border-bottom: dashed #666 1px; cursor: help; }
@@ -161,7 +161,7 @@ a.small         { font-size: .9em; }
 .alias          { font-style:italic; }
 
 #errors      { margin: 10px 0; }
-.errorMsg    { padding: 3px 0; color: red; font-weight: bold}
+.errorMsg    { padding: 3px 0; color: #8b0000; font-weight: bold}
 .statusMsg   { display: none; } /* Status messages are sent to the browser before the */
                                 /* stylesheet.  If this style ever gets applied, that */
                                 /* means there was an error and these messages should */
@@ -840,3 +840,41 @@ table.dlman select { width: 40em; } /* IE-specific setting */
 table.dlman tr td > select { width:auto; min-width: 20em; } /* All other browsers */
 table.dlman { margin: 1em; }
 table.dlman tr.dlbtns { height: 30px; }
+
+/* lightbox */
+#overlay{
+	display:none;
+	position:absolute;
+	top:0;
+	left:0;
+	width:100%;
+	height:100%;
+	z-index:1000;
+	background-color:#333;
+	-moz-opacity: 0.8;
+	opacity:.80;
+	filter: alpha(opacity=80);
+}
+
+.lightbox, .lightboxerror {
+	color: #333;
+	display: none;
+	position: absolute;
+	top: 25%;
+	left: 8%;
+	width: 80%;
+	height: 50%;
+	padding: 1em;
+	background-color: white;
+	text-align: left;
+	z-index:1001;
+	overflow: auto;	
+}
+
+.lightboxerror {
+	border: 1em solid #8b0000;
+}
+
+.lightbox .errorMsg { padding-top: 0; margin-top: 0; }
+
+.lightbox[id]{ /* IE6 and below Can't See This */    position:fixed;    }#overlay[id]{ /* IE6 and below Can't See This */    position:fixed;    }
