@@ -40,7 +40,7 @@
             button    => 'delete_red',
             useTable  => 0,
             js        => ($oc_id == $primary_oc_id ? qq{style="display: none" } : '') .
-                         qq{onclick="ocListMan.remove(this.parentNode.parentNode); return false"} 
+                         qq{onclick="ocListMan.remove(this.parentNode.parentNode); return false"}
         &>
     </td>
   </tr>
